# IBM-Disaster-Management-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
ibm_dmt/: __init__.py  main.py
ibm_dmt/core/: __init__.py  alert_manager.py  config.py  credential_store.py  disaster_module.py  logger.py  plugin_manager.py  scheduler.py
ibm_dmt/gui/: app.py  dashboard.py  main_window.py  session_manager.py
ibm_dmt/gui/resources/: styles.qss
ibm_dmt/modules/database_backup/: backup_engine.py  compression.py  encryption.py  gui.py  plugin.py
ibm_dmt/modules/database_backup/connectors/: __init__.py  base.py  mariadb.py  mongodb.py  mssql.py  mysql.py  oracle.py  postgresql.py  redis.py  sqlite.py
ibm_dmt/modules/database_backup/destinations/: __init__.py  base.py  discord.py  github.py  local.py
installer/: install.ps1  install.sh  one-liner.sh
